--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
+<header>
+    <strong>This is my Portfolio!</strong>
+    <nav>
+        <div>About Me</div>
+        <div>Work</div>
+        <div>Contact Me</div>
+        <div>Resume</div>
+    </nav>
+        <aside>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, iste ullam praesentium blanditiis rerum consequatur sunt repellat perspiciatis quis iure eius, vitae, dolorum eveniet. Ea labore placeat corrupti incidunt exercitationem.</aside>
+</header>
 
+<h1>Diego Reyna</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, odio! Ab velit officia earum aliquid saepe incidunt, accusamus dolores quam dolore necessitatibus dignissimos, nemo ad, officiis doloremque iusto facere nihil.</p>
 <body>
-    
-</body>
+    <section>
+        <h2>Work</h2>
+        <a></a>
+        <a></a>
+    </section>
+        <footer>
+    <div>Contact Me</div>
+    <div>Phone Number</div>
+    <div>GitHub</div>
+    <div>Website</div>
+</footer>
 </html>
