added background and fonts

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div>Contact Me</div>
         <div>Resume</div>
     </nav>
-        <aside>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, iste ullam praesentium blanditiis rerum consequatur sunt repellat perspiciatis quis iure eius, vitae, dolorum eveniet. Ea labore placeat corrupti incidunt exercitationem.</aside>
+        <aside>Subtitles</aside>
 </header>
 
 <h1>Diego Reyna</h1>
