added gap to top right

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
 <h1>Diego Reyna</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, odio! Ab velit officia earum aliquid saepe incidunt, accusamus dolores quam dolore necessitatibus dignissimos, nemo ad, officiis doloremque iusto facere nihil.</p>
-<body>
+    <body>
     <section>
         <h2>Work</h2>
         <a></a>
         <a></a>
     </section>
         <footer>
-    <div>Contact Me</div>
-    <div>Phone Number</div>
-    <div>GitHub</div>
-    <div>Website</div>
+    <aside>Contact Me</aside>
+    <aside>Phone Number</aside>
+    <aside>GitHub</aside>
+    <aside>Website</aside>
 </footer>
 </html>
