adjusted  this is my portfolio and name

--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
     <link rel="stylesheet" href="/style.css">
-<head>
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
+
 <header>
-    <strong>This is my Portfolio!</strong>
+    <h2><strong>This is my Portfolio!</strong></h2>
     <nav>
-        <div>About Me</div>
-        <div>Work</div>
-        <div>Contact Me</div>
-        <div>Resume</div>
+        <a href="#">About Me</a>
+        <a href="#">Work</a>
+        <a href="#">Contact Me</a>
+        <a href="#">Resume</a>
     </nav>
         <aside>Subtitles</aside>
 </header>
 
 <h1>Diego Reyna</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, odio! Ab velit officia earum aliquid saepe incidunt, accusamus dolores quam dolore necessitatibus dignissimos, nemo ad, officiis doloremque iusto facere nihil.</p>
-    <body>
     <section>
         <h2>Work</h2>
         <a></a>
         <a></a>
     </section>
-        <footer>
+</body>
+
+<footer>
     <aside>Contact Me</aside>
     <aside>Phone Number</aside>
     <aside>GitHub</aside>
