added button, made the header fit the page, centered bio and contact info

--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
         <a href="#">Contact Me</a>
         <a href="#">Resume</a>
     </nav>
-        <aside>Subtitles</aside>
 </header>
-
+<button class="adv">I dare you!</button>
 <h1>Diego Reyna</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, odio! Ab velit officia earum aliquid saepe incidunt, accusamus dolores quam dolore necessitatibus dignissimos, nemo ad, officiis doloremque iusto facere nihil.</p>
     <section>
-        <h2>Work</h2>
+        <h3>Work</h3>
         <a></a>
         <a></a>
     </section>
