--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, odio! Ab velit officia earum aliquid saepe incidunt, accusamus dolores quam dolore necessitatibus dignissimos, nemo ad, officiis doloremque iusto facere nihil.</p>
     <section>
         <h3>Work</h3>
-        <a></a>
-        <a></a>
+        <a><img src="" alt=""></a>
+        <a><img src="" alt=""></a>
     </section>
 </body>
 
