added box styles to about me and work

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="/style.css">
-    <head>
+<link rel="stylesheet" href="/style.css">
+
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,26 +12,37 @@
 <header>
     <h2><strong>This is my Portfolio!</strong></h2>
     <nav>
-        <a href="#">About Me</a>
-        <a href="#">Work</a>
-        <a href="#">Contact Me</a>
-        <a href="#">Resume</a>
+        <a href="#about me">About Me</a>
+        <a href="#work">Work</a>
+        <a href="#contact me">Contact Me</a>
+        <a href="#resume">Resume</a>
     </nav>
 </header>
+
 <button class="adv">I dare you!</button>
+
 <h1>Diego Reyna</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, odio! Ab velit officia earum aliquid saepe incidunt, accusamus dolores quam dolore necessitatibus dignissimos, nemo ad, officiis doloremque iusto facere nihil.</p>
-    <section>
-        <h3>Work</h3>
-        <a><img src="" alt=""></a>
-        <a><img src="" alt=""></a>
-    </section>
-</body>
+
+<p id="about me">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, odio! Ab velit officia earum
+    aliquid saepe incidunt, accusamus dolores quam dolore necessitatibus dignissimos, nemo ad, officiis doloremque iusto
+    facere nihil.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto soluta libero corrupti laborum voluptatem,
+    recusandae, quasi illo magni tempore esse nihil molestiae quis praesentium accusantium est minus at iste voluptas!
+</p>
+
+<section>
+    <h3 id="work">Work</h3>
+    <a><img class ="fit-picture" src="./assets/work.jpg" alt=""></a>
+    <a><img class ="fit-picture" src="./assets/port.jpg" alt=""></a>
+    <div><h3 id="resume">Resume</h3></div>
+
+</section>
 
 <footer>
-    <aside>Contact Me</aside>
-    <aside>Phone Number</aside>
-    <aside>GitHub</aside>
-    <aside>Website</aside>
+    <h3 id="contact me">Contact Me</h3>
+    <aside>Phone Number: 999-999-999</aside>
+    <aside>GitHub: </aside>
+    <aside>Website: </aside>
 </footer>
+
 </html>
