added pro pic and moved name and bio to the right

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </header>
 
 <button class="adv">I dare you!</button>
-
+<a><img class="fit-picture1" src="./assets/profile.jpg"</a>
 <h1>Diego Reyna</h1>
 
 <p id="about me">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, odio! Ab velit officia earum
