--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#resume">Resume</a>
     </nav>
 </header>
-
+<main>
 <button class="adv">I dare you!</button>
 <a><img class="fit-picture1" src="./assets/profile.jpg"</a>
 <h1>Diego Reyna</h1>
@@ -29,7 +29,7 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto soluta libero corrupti laborum voluptatem,
     recusandae, quasi illo magni tempore esse nihil molestiae quis praesentium accusantium est minus at iste voluptas!
 </p>
-
+</main>
 <section>
     <h3 id="work">Work</h3>
     <a><img class ="fit-picture" src="./assets/work.jpg" alt=""></a>
