--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="./style.css">
 
 <head>
     <meta charset="UTF-8">
@@ -32,8 +32,8 @@
 </main>
 <section>
     <h3 id="work">Work</h3>
-    <a><img class ="fit-picture" src="./assets/work.jpg" alt=""></a>
-    <a><img class ="fit-picture" src="./assets/port.jpg" alt=""></a>
+    <div><img class ="fit-picture" src="./assets/work.jpg" alt=""></div>
+    <div<img class ="fit-picture" src="./assets/port.jpg" alt=""></div>
     <div><h3 id="resume">Resume</h3></div>
 
 </section>
