--- a/index.html
+++ b/index.html
@@ -20,21 +20,29 @@
 </header>
 <main>
 <button class="adv">I dare you!</button>
-<a><img class="fit-picture1" src="./assets/profile.jpg"</a>
-<h1>Diego Reyna</h1>
+<div id="about-me">
+    <img class="fit-picture1" src="./assets/profile.jpg" width="500px" height="500px" />
+    <div class="content">
+        <h1 class="name">Diego Reyna</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, odio! Ab velit officia earum
+            aliquid saepe incidunt, accusamus dolores quam dolore necessitatibus dignissimos, nemo ad, officiis doloremque iusto
+            facere nihil.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto soluta libero corrupti laborum voluptatem,
+            recusandae, quasi illo magni tempore esse nihil molestiae quis praesentium accusantium est minus at iste voluptas!
+        </p>
+    </div>
+</div>
 
-<p id="about me">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, odio! Ab velit officia earum
-    aliquid saepe incidunt, accusamus dolores quam dolore necessitatibus dignissimos, nemo ad, officiis doloremque iusto
-    facere nihil.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto soluta libero corrupti laborum voluptatem,
-    recusandae, quasi illo magni tempore esse nihil molestiae quis praesentium accusantium est minus at iste voluptas!
-</p>
 </main>
 <section>
     <h3 id="work">Work</h3>
-    <div><img class ="fit-picture" src="./assets/work.jpg" alt=""></div>
-    <div<img class ="fit-picture" src="./assets/port.jpg" alt=""></div>
-    <div><h3 id="resume">Resume</h3></div>
+    <div class="resume-section">
+        <img class ="fit-picture" src="./assets/work.jpg" height="300px">
+        <img class ="fit-picture" src="./assets/port.jpg" height="300px">
+    </div>
+    <div class="resume-section">
+        <h3 id="resume">Resume</h3>
+    </div>
 
 </section>
 
