--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
 </header>
 <main>
-<button class="adv">I dare you!</button>
+<!-- <button class="adv">I dare you!</button> -->
 <div id="about-me">
     <img class="fit-picture1" src="./assets/profile.jpg" width="500px" height="500px" />
     <div class="content">
@@ -42,8 +42,9 @@
     </div>
     <div class="resume-section">
         <h3 id="resume">Resume</h3>
+    <li><a href="//github.com/jdiego-1805"></li>
     </div>
-
+    
 </section>
 
 <footer>
