added more styles

--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
 <section>
     <h3 id="work">Work</h3>
     <div class="resume-section">
-        <img class ="fit-picture" src="./assets/work.jpg" height="300px">
-        <img class ="fit-picture" src="./assets/port.jpg" height="300px">
+        <img class ="fit-picture" src="./assets/work.jpg" height="600px">
+        <img class ="fit-picture" src="./assets/port.jpg" height="400px">
+        <img class ="fit-picture" src="./assets/port.jpg" height="500px">
+        <img class ="fit-picture" src="./assets/work.jpg" height="400px">
     </div>
     <div class="resume-section">
         <h3 id="resume">Resume</h3>
-    <li><a href="//github.com/jdiego-1805"></li>
+    <a href="//github.com/jdiego-1805">GitHub</a>
     </div>
     
 </section>
@@ -50,7 +52,6 @@
 <footer>
     <h3 id="contact me">Contact Me</h3>
     <aside>Phone Number: 999-999-999</aside>
-    <aside>GitHub: </aside>
     <aside>Website: </aside>
 </footer>
 
