--- a/index.html
+++ b/index.html
@@ -37,10 +37,14 @@
 <section>
     <h3 id="work">Work</h3>
     <div class="resume-section">
-        <img class ="fit-picture" src="./assets/work.jpg" height="600px">
-        <img class ="fit-picture" src="./assets/port.jpg" height="400px">
-        <img class ="fit-picture" src="./assets/port.jpg" height="500px">
-        <img class ="fit-picture" src="./assets/work.jpg" height="400px">
+        <h4>MockPortfolio</h4>
+        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/work.jpg" height="600px"></a>
+        <h4>MockPortfolio</h4>
+        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/port.jpg" height="400px"></a>
+        <h4>MockPortfolio</h4>
+        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/port.jpg" height="500px"></a>
+        <h4>MockPortfolio</h4>
+        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/work.jpg" height="400px"></a>
     </div>
     <div class="resume-section">
         <h3 id="resume">Resume</h3>
