--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#about me">About Me</a>
         <a href="#work">Work</a>
         <a href="#contact me">Contact Me</a>
-        <a href="#resume">Resume</a>
+        <a href="//github.com/jdiego-1805">GitHub</a>
     </nav>
 </header>
 <main>
@@ -44,11 +44,7 @@
         <h4>MockPortfolio</h4>
         <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/port.jpg" height="500px"></a>
         <h4>MockPortfolio</h4>
-        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/work.jpg" height="400px"></a>
-    </div>
-    <div class="resume-section">
-        <h3 id="resume">Resume</h3>
-    <a href="//github.com/jdiego-1805">GitHub</a>
+        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/work.jpg" height="400px"></a> 
     </div>
     
 </section>
@@ -56,7 +52,8 @@
 <footer>
     <h3 id="contact me">Contact Me</h3>
     <aside>Phone Number: 999-999-999</aside>
-    <aside>Website: </aside>
+    <aside>Website: example@email.com</aside>
+    <a href="//github.com/jdiego-1805">GitHub</a>
 </footer>
 
 </html>
