--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
 <section>
     <h3 id="work">Work</h3>
     <div class="resume-section">
-        <h4>MockPortfolio</h4>
-        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/work.jpg" height="600px"></a>
-        <h4>MockPortfolio</h4>
-        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/port.jpg" height="400px"></a>
-        <h4>MockPortfolio</h4>
-        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/port.jpg" height="500px"></a>
-        <h4>MockPortfolio</h4>
-        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/work.jpg" height="400px"></a> 
+        <div><h4>MockPortfolio</h4>
+        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/work.jpg" height="600px"></a></div>
+        <div><h4>MockPortfolio</h4>
+        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/port.jpg" height="400px"></a></div>
+        <div><h4>MockPortfolio</h4>
+        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/port.jpg" height="500px"></a></div>
+        <div><h4>MockPortfolio</h4>
+        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/work.jpg" height="400px"></a> </div>
     </div>
     
 </section>
 
 <footer>
-    <h5 id="contact me">Contact Me</h5>
+    <h5 id="contact-me">Contact Me</h5>
     <aside>Phone Number: 999-999-999</aside>
-    <aside>Website: example@email.com</aside>
+    <aside>Website: <a href="@example.com"</aside>
     <a href="//github.com/jdiego-1805">GitHub</a>
 </footer>
 
