--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio</title>
-        <link rel="stylesheet" href="./style.css">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <header>
@@ -19,41 +19,56 @@
     </nav>
 </header>
 <main>
-<!-- <button class="adv">I dare you!</button> -->
-<div id="about-me">
-    <img class="fit-picture1" src="./assets/profile.jpg" width="500px" height="500px" />
-    <div class="content">
-        <h1 class="name">Diego Reyna</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, odio! Ab velit officia earum
-            aliquid saepe incidunt, accusamus dolores quam dolore necessitatibus dignissimos, nemo ad, officiis doloremque iusto
-            facere nihil.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto soluta libero corrupti laborum voluptatem,
-            recusandae, quasi illo magni tempore esse nihil molestiae quis praesentium accusantium est minus at iste voluptas!
-        </p>
+    <!-- <button class="adv">I dare you!</button> -->
+    <div id="about-me">
+        <img class="fit-picture1" src="./assets/profile.jpg" width="500px" height="500px" />
+        <div class="content">
+            <h1 class="name">Diego Reyna</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, odio! Ab velit officia earum
+                aliquid saepe incidunt, accusamus dolores quam dolore necessitatibus dignissimos, nemo ad, officiis
+                doloremque iusto
+                facere nihil.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto soluta libero corrupti laborum
+                voluptatem,
+                recusandae, quasi illo magni tempore esse nihil molestiae quis praesentium accusantium est minus at iste
+                voluptas!
+            </p>
+        </div>
     </div>
-</div>
 
 </main>
 <section>
     <h3 id="work">Work</h3>
     <div class="resume-section">
-        <div><h4>MockPortfolio</h4>
-        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/work.jpg" height="600px"></a></div>
-        <div><h4>MockPortfolio</h4>
-        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/port.jpg" height="400px"></a></div>
-        <div><h4>MockPortfolio</h4>
-        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/port.jpg" height="500px"></a></div>
-        <div><h4>MockPortfolio</h4>
-        <a href="https://github.com/jdiego-1805/MockPortfolio"><img class ="fit-picture" src="./assets/work.jpg" height="400px"></a> </div>
+        <div>
+            <h4>MockPortfolio</h4>
+            <a href="https://github.com/jdiego-1805/MockPortfolio"><img class="fit-picture" src="./assets/work.jpg"
+                    height="600px"></a>
+        </div>
+        <div>
+            <h4>MockPortfolio</h4>
+            <a href="https://github.com/jdiego-1805/MockPortfolio"><img class="fit-picture" src="./assets/port.jpg"
+                    height="400px"></a>
+        </div>
+        <div>
+            <h4>MockPortfolio</h4>
+            <a href="https://github.com/jdiego-1805/MockPortfolio"><img class="fit-picture" src="./assets/port.jpg"
+                    height="500px"></a>
+        </div>
+        <div>
+            <h4>MockPortfolio</h4>
+            <a href="https://github.com/jdiego-1805/MockPortfolio"><img class="fit-picture" src="./assets/work.jpg"
+                    height="400px"></a>
+        </div>
     </div>
-    
+
 </section>
 
 <footer>
     <h5 id="contact-me">Contact Me</h5>
     <aside>Phone Number: 999-999-999</aside>
-    <aside>Website: <a href="@example.com"</aside>
-    <a href="//github.com/jdiego-1805">GitHub</a>
+    <aside>Website: <a href="@example.com">@example.com</a></aside>
+            <a href="//github.com/jdiego-1805">GitHub</a>
 </footer>
 
 </html>
