--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="#about me">About Me</a>
         <a href="#work">Work</a>
-        <a href="#contact me">Contact Me</a>
+        <a href="#contact-me">Contact Me</a>
         <a href="//github.com/jdiego-1805">GitHub</a>
     </nav>
 </header>
